# gdalproj5

./: CMakeLists.txt  GNUmakefile  LICENSE  main.cpp
cmake/Modules.win32/: FindGDAL.cmake
